--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -550,6 +550,11 @@ video {
   margin-right: auto;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
